```mermaid
classDiagram
    class Product {
        -String code
        -String name
        -double price
        -double discountPrice
        +withDiscountPrice(double) Product
        +getPrice() double
    }
    class Promotion {
        <<interface>>
        +apply(List) List
        +getName() String
    }
    class ShoppingCart {
        -List products
        -List promotions
        +addProduct(Product)
        +addPromotion(Promotion)
        +applyPromotionsInOrder() List
        +applyBestPromotionOrderForCustomer() List
    }
    class FreeMugPromotion {
        -double threshold
        -Product mug
    }
    class OrderValuePercentageDiscountPromotion {
        -double threshold
        -double percentage
    }
    class SingleProductCouponPromotion {
        -String productCode
        -double percentage
    }
    class ThreeForTwoCheapestFreePromotion
    class ProductUtils {
        +sumPrices(Collection) double
        +sumDiscountPrices(Collection) double
    }
    class ProductComparators {
        +BY_PRICE_DESC_THEN_NAME_ASC
        +BY_PRICE_ASC
        +BY_NAME_ASC
    }
    class BestPromotionOrderFinder {
        +findBestOrder(List, List) List
    }

    FreeMugPromotion ..|> Promotion
    OrderValuePercentageDiscountPromotion ..|> Promotion
    SingleProductCouponPromotion ..|> Promotion
    ThreeForTwoCheapestFreePromotion ..|> Promotion

    ShoppingCart --> Product
    ShoppingCart --> Promotion
    ShoppingCart --> BestPromotionOrderFinder
    ShoppingCart --> ProductUtils
    ThreeForTwoCheapestFreePromotion --> ProductComparators
```